--- a/WolvenKit/Views/Editors/JournalEditor/JournalEditorView.xaml
+++ b/WolvenKit/Views/Editors/JournalEditor/JournalEditorView.xaml
@@ -1,7 +1,8 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.JournalEditor.JournalEditorView"
+<catel:UserControl x:Class="WolvenKit.Views.JournalEditor.JournalEditorView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="DataWindow_IsVisibleChanged">
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="DataWindow_IsVisibleChanged"
+                   >
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -10,17 +11,41 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </catel:UserControl.Resources>
-    <Grid>
+    <Grid Height="600" Width="900">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
-        <hc:ScrollViewer Height="500" Width="320">
-            <hc:CheckTreeView></hc:CheckTreeView>
-        </hc:ScrollViewer>
-        <Grid Grid.Column="1" Width="450">
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="150"/>
+
+        </Grid.RowDefinitions>
+        
+        <Grid Grid.Row="0">
+            <Grid>
+                <Image Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+                </Image>
+            </Grid>
+        </Grid>
+        
+        <Grid Grid.Row="1">
+            <Image HorizontalAlignment="Left" Height="150" Width="150">
+                
+            </Image>
+            <hc:CheckTreeView Margin="150,0,0,0">
+                
+            </hc:CheckTreeView>
+        </Grid>
+
+        
+
+        <Grid Grid.Column="1" Grid.RowSpan="2">
+            <RichTextBox>
+                
+            </RichTextBox>
         </Grid>
     </Grid>
     
