--- a/WolvenKit/Views/Tools/GameDebuggerTool/GameDebuggerToolView.xaml
+++ b/WolvenKit/Views/Tools/GameDebuggerTool/GameDebuggerToolView.xaml
@@ -1,16 +1,81 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.GameDebuggerTool.GameDebuggerToolView"
+<catel:UserControl x:Class="WolvenKit.Views.GameDebuggerTool.GameDebuggerToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+
+    <Grid Height="600" Width="600">
+
+
         
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+        <hc:TabControl Height="400" VerticalAlignment="Top">
+            <hc:TabItem Header="Game">
+                <Grid>
+                    <StackPanel Margin="35" HorizontalAlignment="Left" Orientation="Vertical" Width="250">
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="ConnectButton" Content="Connect"/>
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="StartGameMinusNetButton" Content="Start game with -net"/>
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="TaskKillGameButton" Content="TaskKill Game"/>
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="StartGameWithCustomCommandsButton" Content="Start Game With Custom Commands"/>
+
+                    </StackPanel>
+
+                   
+                    <TextBlock HorizontalAlignment="Center" Margin="15,40,0,0" VerticalAlignment="Top">
+                        STATUS
+                    </TextBlock>
+                </Grid>
+                
+
+            </hc:TabItem>
+            <hc:TabItem Header="Utilities">
+                <Grid >
+                    <hc:UniformSpacingPanel Spacing="5" Margin="35" HorizontalAlignment="Left" Orientation="Vertical" Width="175">
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="SendConsoleCommandButton" Content="Send Console Command"/>
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="GetOpCodeButton" Content="Get Opcode"/>
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="VarlistButton" Content="Varlist"/>
+                        <Button HorizontalContentAlignment="Left" HorizontalAlignment="Stretch" x:Name="ListInstalledModsButton" Content="List Installed Mods"/>
+
+                    </hc:UniformSpacingPanel>
+
+                    <hc:UniformSpacingPanel Spacing="5" Margin="35" HorizontalAlignment="Right" Orientation="Vertical" Width="325">
+                        <hc:TextBox Width="325" hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Command" Text=""/>
+                        <hc:TextBox Width="325" hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Funcname" Text=""/>
+                        <hc:TextBox Width="325" hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Classname" Text=""/>
+                        <hc:TextBox Width="325" hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Section" Text=""/>
+                        <hc:TextBox Width="325" hc:InfoElement.TitleWidth="100" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Name" Text=""/>
+
+                    </hc:UniformSpacingPanel>
+                </Grid>
+            </hc:TabItem>
+            <hc:TabItem Header="Vars">
+                <Grid>
+                    <Button Content="Help" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15,0"></Button>
+                        <DataGrid Margin="15,35,15,15" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+
+
+                        </DataGrid>
+
+                </Grid>
+
+                
+            </hc:TabItem>
+        </hc:TabControl>
+
+        <RichTextBox Height="200" VerticalAlignment="Bottom">
+            
+        </RichTextBox>
+       
+       
+
+
     </Grid>
-    
+
 </catel:UserControl>
