--- a/WolvenKit/Views/Tools/ImporterTool/ImporterToolView.xaml
+++ b/WolvenKit/Views/Tools/ImporterTool/ImporterToolView.xaml
@@ -1,16 +1,40 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.ImporterTool.ImporterToolView"
+<catel:UserControl x:Class="WolvenKit.Views.ImporterTool.ImporterToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
 
-    <Grid>
+
+    <Grid Height="600" Width="600">
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
-    </Grid>
+            <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Button Content="Import"/>
+                <Separator/>
+                <Button Content="Auto-Fill Texturegroups"/>
+                <ComboBox Text="" Width="150"></ComboBox>
+
+            </ToolBar>
     
+
+        <ListView Grid.Row="1"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+
+        </ListView>
+
+
+    </Grid>
+
 </catel:UserControl>
+
