--- a/WolvenKit/Views/Tools/MenuTool/MenuCreatorToolView.xaml
+++ b/WolvenKit/Views/Tools/MenuTool/MenuCreatorToolView.xaml
@@ -1,7 +1,8 @@
-<catel:UserControl x:Class="WolvenKit.Views.RadishTool.RadishToolView"
+<catel:UserControl x:Class="WolvenKit.Views.Tools.MenuTool.MenuCreatorToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -13,40 +14,36 @@
 
 
     <Grid Height="600" Width="900">
-
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
+        
+            <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Button Content="File"/>
+                <Separator/>
+                <Button Content="Edit Main"/>
+                <Separator/>
+                <Button Content="Refresh"/>
 
-        <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
-
-
-        </ToolBar>
-
-
-        <hc:PropertyGrid Grid.Row="1" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-
-
-        </hc:PropertyGrid>
-
-        <hc:PropertyGrid Grid.Column="2" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            </ToolBar>
 
 
-        </hc:PropertyGrid>
+        <hc:CheckTreeView Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-        <ListView Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" Grid.Column="1">
+
+        </hc:CheckTreeView>
+
+
+        <hc:PropertyGrid Grid.Column="1" Grid.Row="1">
             
-        </ListView>
+        </hc:PropertyGrid>
+
 
     </Grid>
 
 </catel:UserControl>
-
