--- a/WolvenKit/Views/Tools/WccTool/WccToolView.xaml
+++ b/WolvenKit/Views/Tools/WccTool/WccToolView.xaml
@@ -1,16 +1,53 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.WccTool.WccToolView"
+<catel:UserControl x:Class="WolvenKit.Views.WccTool.WccToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
-    <Grid>
+    <catel:UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <hc:ThemeResources/>
+                <hc:Theme/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </catel:UserControl.Resources>
+
+
+    <Grid Height="600" Width="900">
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="3*"/>
+
         </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+
+        <ToolBar HorizontalAlignment="Left" VerticalAlignment="Top">
+
+            <Button Content="Run"/>
+        </ToolBar>
+
+
+        <ListView Grid.Row="1" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+
+        </ListView>
+
+        <hc:PropertyGrid Grid.Column="2" Grid.Row="2"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+
+        </hc:PropertyGrid>
+
+        <TextBox Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="1" Grid.Column="1">
+
+        </TextBox>
+
     </Grid>
-    
+
 </catel:UserControl>
+
