--- a/WolvenKit/Views/HomePage/Pages/DebugPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/DebugPageView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.DebugPageView"
+<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.DebugPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
                    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"   
@@ -14,6 +14,11 @@
 
 
         <hc:UniformSpacingPanel Spacing="10">
+
+            <hc:ComboBox MaxDropDownHeight="1200" x:Name="TesterBro" HorizontalAlignment="Stretch" Height="1200" Width="1200" SelectionChanged="TesterBro_SelectionChanged">
+           
+            </hc:ComboBox>
+            
             <TreeView>
                 <TreeViewItem>
                     <TreeViewItem>
