--- a/WolvenKit/Views/RibbonView.xaml
+++ b/WolvenKit/Views/RibbonView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.RibbonView"
+<catel:UserControl x:Class="WolvenKit.Views.RibbonView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
@@ -262,7 +262,8 @@
                                 <VirtualizingStackPanel />
                             </ItemsPanelTemplate>
                         </fluent:ComboBox.ItemsPanel>
-                        <ComboBoxItem x:Name="CBAssetBrowserItem" Content="Asset Browser" Selected="CBAssetBrowserItem_Selected"/>
+                        <Button x:Name="CBAssetBrowserItem" Content="Asset Browser"                                   Command="{catel:CommandManagerBinding Application.ShowAssetBrowser}"/>
+
                         <ComboBoxItem x:Name="CBPluginManager" Content="Plugin Manager" Selected="CBPluginManager_Selected"/>
                         <ComboBoxItem x:Name="CBVisualEditorItem" Content="Visual Editor (WIP)" Selected="CBVisualEditorItem_Selected"/>
                         <ComboBoxItem x:Name="CBCodeEditorItem" Content="Code Editor (WIP)" Selected="CBCodeEditorItem_Selected"/>
