--- a/WolvenKit/Views/Tools/AssetBrowser/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Tools/AssetBrowser/AssetBrowserView.xaml
@@ -1,11 +1,11 @@
-<catel:DataWindow x:Class="WolvenKit.Views.AssetBrowser.AssetBrowserView"
+<catel:UserControl x:Class="WolvenKit.Views.AssetBrowser.AssetBrowserView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                  xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon" ShowInTaskbar="True" AllowsTransparency="True"  BorderBrush="{x:Null}" WindowStartupLocation="CenterScreen" Width="1200" MinHeight="600" MaxHeight="800" WindowStyle="None" Title="Asset Browser" IsVisibleChanged="DataWindow_IsVisibleChanged" >
+                  xmlns:catel="http://schemas.catelproject.com" xmlns:Fluent="urn:fluent-ribbon"  BorderBrush="{x:Null}"     IsVisibleChanged="DataWindow_IsVisibleChanged" >
 
-    <catel:DataWindow.Resources>
+    <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
 
@@ -15,45 +15,19 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
-    </catel:DataWindow.Resources>
+    </catel:UserControl.Resources>
     <Border hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"/>
 
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="9*"/>
             </Grid.RowDefinitions>
 
-            <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource RegionBrush}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
+            
 
-                <!--TitleBar  Please add onmousedown event to be able to drag the window-->
-                <Button 
-                    Style="{StaticResource ButtonIcon}" 
-                    hc:IconElement.Geometry="{DynamicResource GlobalClose}" 
-                    Click="Button_Click" 
-                    Background="Transparent" 
-                    BorderBrush="{x:Null}"  
-                    HorizontalAlignment="Right" 
-                    VerticalAlignment="Center" 
-                    Margin="3,3,5,3" >
-                </Button>
-
-                <Button  Width="40"
-                    Style="{StaticResource ButtonIcon}"
-                    hc:IconElement.Geometry="{DynamicResource GlobalMinimize}"
-                    Click="Button_Click_1"
-                    BorderBrush="{x:Null}"
-                    Background="Transparent" 
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
-                    Margin="3,3,45,3" >
-                </Button>
-                <TextBlock Text="Asset Browser" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
-            </Grid>
-
-            <StackPanel Grid.Row="1" VerticalAlignment="Top"  >
+            <StackPanel Grid.Row="0" VerticalAlignment="Top"  >
                 <ToolBarTray     Style="{DynamicResource MahApps.Styles.ToolBarTray}" >
                     <ToolBar  Band="0" Style="{StaticResource ToolBarBaseStyle}" Padding="6">
                         <Menu Background="Transparent" VerticalAlignment="Center">
@@ -196,4 +170,4 @@
             </Grid>
         </Grid>
     </Border>
-</catel:DataWindow>
+</catel:UserControl>
