First time, project wizard, settings viewmodel updates (#373)
* Update master from dev (#298)

* ds

* Revert "ds"

This reverts commit 15d0f0e66842db0af7530615f0c38b5798322c92.

* Revert "Getting on track with new branches locally."

This reverts commit 48ecc40c8e6932851286e8cbb211afc39ce43ae4, reversing
changes made to 452c9b6a34f18ba4e57c6994d1ddd97221fd8e38.

# Conflicts:
#	WolvenKit/App.xaml
#	WolvenKit/Views/HomePageView.xaml.cs
#	WolvenKit/Views/LogView.xaml.cs

* Fix build

* Adding back local work without breaking the universe :)

* HomePage button added to Ribbonview Backstage.
Icon overhaul

* Some renaming (forgot to add View at the end of the views names)
Added Pages for project Wizard and their viewmodels

* Added back a bunch of themes.

* Basic Design  : ProjectWizard

* Design : First use wizard started

* Design : First Setup Wizard
Details : Started base design of pages.

* Design : First Setup Wizard
Details : Basic Design Finished.

* Basic Design : Publish Wizard
Details : ViewModels and Views created and registered.

* Basic Design : Homepage Pages , UserWizard , ThemeWizard
Details : Created Views and ViewModels and Registered ViewModels.
Extra : UserWizard and ThemeWizard most likely will only require one View but will still seperate this into a page so it can be used elsewhere too.

* Basic Design : Main Pages for User and Theme Wizard
Details : Created Views and ViewModels and Registered ViewModels.

* Design : WikiPage added WebView2 (Edge update required)
Details : None

* Basic Design : Homepage pages.
Design : Basic Design for Homepage pages.
Details : Wikipage is basically finished only has to be shown uppon button click.
All it requires is the webview2 runtime to be installed on the end users system.
If not installed the program will not crash and just show a white page on the wikipage instead.

All pages have gotten a header added.

* Design : Created Headers + grids for f

--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/FinalizeSetupView.xaml
@@ -1,7 +1,10 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.FinalizeSetupView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   xmlns:hc="https://handyorg.github.io/handycontrol"
+                   MaxHeight="600"
+                   Loaded="UserControl_Loaded">
 
     <Grid VerticalAlignment="Center" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
@@ -30,9 +33,9 @@
                                     <LineBreak/>
                                     <Run Text="(Optional)"></Run>
                                 </TextBlock>
-                                <hc:ImageSelector  Margin="200,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
+                                <hc:ImageSelector x:Name="imgSelector" Margin="200,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
 
-                                <TextBlock Margin="205,0,0,5" VerticalAlignment="Bottom" Text="Username"></TextBlock>
+                                <TextBlock Margin="205,0,0,5" VerticalAlignment="Bottom" Text="{Binding Author}"></TextBlock>
                             </Grid>
                             <hc:Divider Margin="0,32,10,0" Content="Theme" HorizontalContentAlignment="Left"></hc:Divider>
 
@@ -47,55 +50,49 @@
                             <Grid Margin="5,32,10,0" >
 
                                 <TextBlock Text="Games" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Type" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding SelectedGames}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
                             <Grid Margin="5,32,10,0" >
 
                                 <TextBlock Text="Auto Install Mods" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Type" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding AutoInstallMods}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
                             <Grid Margin="5,32,10,0" >
 
                                 <TextBlock Text="Automatic Updates" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Type" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding AutoUpdatesEnabled}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
                             <hc:Divider Margin="0,32,10,0" Content="Game Data" HorizontalContentAlignment="Left"></hc:Divider>
-                            <Grid Margin="5,32,10,0" >
+                            <StackPanel Visibility="{Binding CreateModForW3, Converter={StaticResource Boolean2VisibilityConverter}}">
+                                <Grid Margin="5,32,10,0" >
 
-                                <TextBlock Text="TW3 Executable Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
-                            </Grid>
-                            <Grid Margin="5,32,10,0" >
+                                    <TextBlock Text="TW3 Executable Path" VerticalAlignment="Center"></TextBlock>
+                                    <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding W3ExePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                </Grid>
+                                <Grid Margin="5,32,10,0" >
 
-                                <TextBlock Text="TW3 WCC_Lite.exe Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
-                            </Grid>
-                            <Grid Margin="5,32,10,0" >
+                                    <TextBlock Text="TW3 WCC_Lite.exe Path" VerticalAlignment="Center"></TextBlock>
+                                    <TextBox  IsEnabled="False" Margin="200,0,0,0" Text="{Binding WccLitePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                </Grid>
+                                <Grid Margin="5,32,10,0" >
 
-                                <TextBlock Text="TW3 Uncooked Depot Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox   Margin="200,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
-                            </Grid>
-                            <Grid Margin="5,32,10,0" >
+                                    <TextBlock Text="TW3 Uncooked Depot Path" VerticalAlignment="Center"></TextBlock>
+                                    <TextBox   IsEnabled="False" Margin="200,0,0,0" Text="{Binding DepotPath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                </Grid>
+                            </StackPanel>
+                            <StackPanel Visibility="{Binding CreateModForCP77, Converter={StaticResource Boolean2VisibilityConverter}}">
+                                <Grid Margin="5,32,10,0" >
 
-                                <TextBlock Text="TW3 Mods Folder Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
-                            </Grid>
-                            <Grid Margin="5,32,10,0" >
-
-                                <TextBlock Text="TW3 DLC Folder Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
-                            </Grid>
-                            <Grid Margin="5,32,10,0" >
-
-                                <TextBlock Text="CP77 Executable Path" VerticalAlignment="Center"></TextBlock>
-                                <TextBox  Margin="200,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
-                            </Grid>
+                                    <TextBlock Text="CP77 Executable Path" VerticalAlignment="Center"></TextBlock>
+                                    <TextBox IsEnabled="False" Margin="200,0,0,0" Text="{Binding CP77ExePath}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
+                                </Grid>
+                            </StackPanel>
 
                             <hc:Divider Margin="0,32,10,5"></hc:Divider>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                                <Button Height="45" Content="Yes, Confirm my settings!" Margin="0,0,0,0"></Button>
+                                <Button Height="45" Content="Yes, Confirm my settings!" Margin="0,0,0,0" Click="ConfirmSettings_Click"></Button>
 
-                                <Button Height="45" Content="No, Cancel my settings!" Margin="15,0,10,0"></Button>
+                                <Button Height="45" Content="No, Cancel my settings!" Margin="15,0,10,0" Click="CancelSettings_Click"></Button>
                             </StackPanel>
                         </StackPanel>
 
