--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/CreateUserView.xaml
@@ -3,7 +3,16 @@
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                   xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:hc="https://handyorg.github.io/handycontrol"
+                   Loaded="UserControl_Loaded">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Themes/TextBoxExtendedCustom.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
 
     <Grid VerticalAlignment="Center" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
@@ -13,22 +22,13 @@
                         <StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock VerticalAlignment="Center" Text="Profile Image "></TextBlock>
-                                <hc:ImageSelector Margin="64,0,0,0" Width="100" Height="100"  HorizontalAlignment="Left"/>
+                                <hc:ImageSelector x:Name="imgSelector" Margin="64,0,0,0" Width="100" Height="100" HorizontalAlignment="Left"/>
 
                             </StackPanel>
-                            <TextBox   hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Author" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Email" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Donate Link" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-
-
-                            <Grid >
-                                <RichTextBox   Margin="140,32,0,0" HorizontalAlignment="Stretch" Height="100"></RichTextBox>
-
-                                <TextBlock   Text="Default Description" Margin="2,32,0,0" VerticalAlignment="Center" />
-
-                            </Grid>
-
-
+                            <hc:TextBox  x:Name="NameTb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Author" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding Author}" HorizontalAlignment="Stretch" TextChanged="Field_TextChanged"/>
+                            <hc:TextBox  x:Name="EmailTb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Email" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding Email}" VerifyFunc="IsValidEmail" HorizontalAlignment="Stretch" TextChanged="Field_TextChanged"/>
+                            <hc:TextBox  x:Name="DonateTb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Donate Link" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding DonateLink}" HorizontalAlignment="Stretch" TextChanged="Field_TextChanged"/>
+                            <hc:TextBox  VerticalContentAlignment="Top"  hc:InfoElement.TitleWidth="140" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Description" Margin="0,32,10,0" Text="{Binding DefaultDescription}" HorizontalAlignment="Stretch" Height="100"/>
 
                         </StackPanel>
                    
