--- a/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/LocateGameDateView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/FirstSetupWizard/LocateGameDateView.xaml
@@ -3,6 +3,14 @@
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Themes/TextBoxExtendedCustom.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid VerticalAlignment="Center" Grid.Row="3" >
         <Grid Margin="5,5,5,5" Background="{DynamicResource MahApps.Brushes.ThemeBackground}" HorizontalAlignment="Stretch">
             <Grid Grid.Row="1" HorizontalAlignment="Stretch">
@@ -19,15 +27,17 @@
                         <StackPanel>
 
 
-                            <hc:Divider HorizontalContentAlignment="Left" Content="The Witcher 3" Margin="0,32,0,0"></hc:Divider>
+                            <StackPanel Visibility="{Binding CreateModForW3, Converter={StaticResource Boolean2VisibilityConverter}}">
+                                <hc:Divider HorizontalContentAlignment="Left" Content="The Witcher 3" Margin="0,32,0,0"></hc:Divider>
 
-                            <TextBox  hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Executable Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="WCC_Lite.exe Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Uncooked Depot Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Mods Folder" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <TextBox  hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="DLC Folder" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
-                            <hc:Divider  HorizontalContentAlignment="Left"  Content="Cyberpunk 2077" Margin="0,32,0,0"></hc:Divider>
-                            <TextBox  hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Executable Path" Style="{StaticResource TextBoxExtend}" Margin="0,32,0,0" Text="test" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" SelectionBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Stretch"/>
+                                <hc:TextBox  x:Name="w3ExeTxtb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Executable Path" VerifyFunc="VerifyFile" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding W3ExePath}" TextChanged="Field_TextChanged"/>
+                                <hc:TextBox  x:Name="wccLiteExeTxtb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="WCC_Lite.exe Path" VerifyFunc="VerifyFile" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding WccLitePath}" TextChanged="Field_TextChanged"/>
+                                <hc:TextBox  x:Name="uncookedDepTxtb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Uncooked Depot Path" VerifyFunc="VerifyFolder" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding DepotPath}" TextChanged="Field_TextChanged"/>
+                            </StackPanel>
+                            <StackPanel Visibility="{Binding CreateModForCP77, Converter={StaticResource Boolean2VisibilityConverter}}">
+                                <hc:Divider  HorizontalContentAlignment="Left"  Content="Cyberpunk 2077" Margin="0,32,0,0"></hc:Divider>
+                                <hc:TextBox  x:Name="cp77ExeTxtb" hc:InfoElement.Necessary="True" hc:InfoElement.TitleWidth="200" hc:InfoElement.TitlePlacement="Left" hc:InfoElement.Title="Executable Path" VerifyFunc="VerifyFile" Style="{StaticResource TextBoxExtendCustom}" Margin="0,32,0,0" Text="{Binding CP77ExePath}" TextChanged="Field_TextChanged"/>
+                            </StackPanel>
 
 
 
@@ -35,31 +45,31 @@
 
 
                         <StackPanel Grid.Column="1">
-                            <hc:Divider Margin="0,42,0,0"></hc:Divider>
+                            <StackPanel Visibility="{Binding CreateModForW3, Converter={StaticResource Boolean2VisibilityConverter}}">
+                                    <hc:Divider Margin="0,42,0,0"></hc:Divider>
 
-                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,40,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+                                <Button Grid.Column="1" Width="50" Height="34"  Margin="5,50,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="W3ExecutablePathBtn_Click">
+                                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
 
-                            </Button>
-                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,32,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+                                </Button>
+                                <Button Grid.Column="1" Width="50" Height="34"  Margin="5,42,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="WccLitePathBtn_Click">
+                                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
 
-                            </Button>
-                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,98,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+                                </Button>
+                                <Button Grid.Column="1" Width="50" Height="34"  Margin="5,42,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="DepotPathBtn_Click">
+                                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
 
-                            </Button>
-                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,32,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
-
-                            </Button>
-                            <hc:Divider Margin="0,43,0,0"></hc:Divider>
+                                </Button>
+                            </StackPanel>
+                            <StackPanel Visibility="{Binding CreateModForCP77, Converter={StaticResource Boolean2VisibilityConverter}}">
+                                <hc:Divider Margin="0,43,0,0"></hc:Divider>
 
 
-                            <Button Grid.Column="1" Width="50" Height="34"  Margin="5,40,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right">
-                                <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
+                                <Button Grid.Column="1" Width="50" Height="34"  Margin="5,50,0,0"  VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="CP77ExecutablePathBtn_Click">
+                                    <iconPacks:PackIconCodicons  Grid.Row="0"   Kind="FolderOpened" Spin="False" SpinAutoReverse="False" Height="15" Width="15" Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}" Margin="0,0,0,0" HorizontalAlignment="Center"  VerticalAlignment="Center" />
 
-                            </Button>
+                                </Button>
+                            </StackPanel>
        
                         </StackPanel>
                        
